# venndicon

./: .gitignore  LICENCE  README.md  demo.ipynb  index.html  manifest.json  manifest_ben.json  pyproject.toml  requirements.txt  setup.py  venndicon.html  venndicon.js  viewer.html
venndicon/: __init__.py  cli.py  core.py
