[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "venndicon"
version = "0.1.0"
description = "Generate random Venn diagram SVG icons"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "svgwrite>=1.4.0",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipython"]
raster = ["cairosvg>=2.5.0", "Pillow>=8.0.0"]
all = ["jupyter", "ipython", "cairosvg>=2.5.0", "Pillow>=8.0.0"]

[tool.setuptools.packages.find]
where = ["."]

